...
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <EditText
            android:id="@+id/search_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/search"
            android:inputType="text|textNoSuggestions"
            android:paddingStart="110dp"
...
            android:layout_marginTop="15dp"
            app:borderColor="@color/white_T80"
            app:borderSize="1"
            app:iconDrawable="@drawable/action_search" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/search_keywords"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="80dp"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
...
        app:layout_behavior="com.kidscademy.atlas.view.FabMenu$Behavior"
        tools:background="@color/white_T80">

        <com.kidscademy.atlas.view.RandomColorFAB
            android:id="@+id/search_fab_main_menu"
            style="@style/FAB.MenuItem"
            app:srcCompat="@drawable/action_menu"
            tools:visibility="visible" />

        <com.kidscademy.atlas.view.RandomColorFAB
            android:id="@+id/search_fab_index"
            style="@style/FAB.MenuItem"
            app:srcCompat="@drawable/action_index"
...
