...
        app:borderColor="@color/white_T80"
        app:borderSize="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/group_list_item_objects"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/group_list_item_caption"
        app:layout_constraintTop_toBottomOf="@+id/group_list_item_caption">
...
