...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/index_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/compo_objects_group" />

    <com.kidscademy.atlas.view.FabMenu
        android:id="@+id/index_fab_menu"
...
